# dock-ops

./: .rubocop.yml  Cargo.toml  README.md  Rakefile  dock-ops-aliases.sh  dock-ops-completion.bash  dock-ops-completion.fish  dock-ops-wrapper.bash  dock-ops-wrapper.sh  dock-ops.gemspec  install.sh  install_fish_completions.fish
lib/: dock-ops-core.rb  dock-ops.rb  term.rb
src/: config.rs  fs.rs  main.rs  opts.rs  term.rs  util.rs
src/subcommands/: alias.rs  aliases.rs  attach.rs  build.rs  clean.rs  complete.rs  config.rs  down.rs  exec.rs  images.rs  invoke_alias.rs  logs.rs  mod.rs  passthru.rs  ps.rs  psa.rs  restart.rs  rmi.rs  run.rs  setup.rs  stop.rs  up.rs
test/: dock-ops-core.rb  dock-ops.rb
