[package]
name = "dock"
version = "0.4.4"
authors = ["Tyson Acker <tyson@tysonacker.io>"]
edition = "2018"
description = "CLI convenience wrapper for Docker (and especially Docker Compose) development"
repository = "https://github.com/ackertyson/dock-ops"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
console = "0.14.1"
dirs = "4.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.21"
structopt = "0.3.13"
termion = "1.5.6"
walkdir = "2.3.2"
